; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/locks/extr_locks.c___netdata_rwlock_wrlock.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/locks/extr_locks.c___netdata_rwlock_wrlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [47 x i8] c"RW_LOCK: failed to obtain write lock (code %d)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__netdata_rwlock_wrlock(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = call i32 (...) @netdata_thread_disable_cancelability()
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @pthread_rwlock_wrlock(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i64 @unlikely(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @error(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = call i32 (...) @netdata_thread_enable_cancelability()
  br label %16

16:                                               ; preds = %12, %1
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @netdata_thread_disable_cancelability(...) #1

declare dso_local i32 @pthread_rwlock_wrlock(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @netdata_thread_enable_cancelability(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
